Add Pages Function for /api/evaluate

--- a/static/condition.html
+++ b/static/condition.html
@@ -14,7 +14,7 @@
 <body>
   <header class="nav">
     <div class="container nav-row">
-      <a class="brand" href="index.html">Miranda <i id="brand-subtitle">atelier</i></a>
+      <a class="brand" href="#hero"><img class="brand-logo" src="assets/logo/thereallogo.svg" alt="Miranda's"></a>
       <nav class="links" aria-label="Primary">
         <a id="nav-home" href="index.html#hero">Home</a>
         <a id="nav-about" href="index.html#about">About</a>
