--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
 <body>
   <header class="nav">
     <div class="container nav-row">
-      <a class="brand" href="#hero">Miranda <i id="brand-subtitle">atelier</i></a>
+      <a class="brand" href="#hero"><img class="brand-logo" src="assets/logo/thereallogo.svg" alt="Miranda's"></a>
       <nav class="links" aria-label="Primary">
         <a id="nav-home" href="#hero">Home</a>
         <a id="nav-about" href="#about">About</a>
