--- a/static/index.html
+++ b/static/index.html
@@ -6,14 +6,22 @@
   <title>Miranda — Creative Repairs & Alterations</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Nunito:wght@400;600;700;800&family=Caveat:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Nunito:wght@400;600;700;family=Caveat:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="/assets/stickers/bow.ico" type="image/x-icon">
 </head>
 <body>
   <header class="nav">
     <div class="container nav-row">
-      <a class="brand" href="#hero"><img class="brand-logo" src="assets/logo/thereallogo.svg" alt="Miranda's"></a>
+      <a class="brand" href="index.html#hero">
+        <picture>
+          <source media="(max-width: 767.98px)" srcset="assets/logo/mobile_logo.svg">
+          <img class="brand-logo" src="assets/logo/procre_logo.svg" alt="Miranda's">
+        </picture>
+      </a>
+      <button class="menu-toggle" type="button" id="menu-toggle" aria-label="Open menu" aria-controls="mobile-menu" aria-expanded="false">
+         <span class="menu-icon" aria-hidden="true"></span>
+      </button>
       <nav class="links" aria-label="Primary">
         <a id="nav-home" href="#hero">Home</a>
         <a id="nav-about" href="#about">About</a>
@@ -24,6 +32,17 @@
       <button class="lang-toggle" type="button" id="lang-toggle" aria-label="Switch language">GR</button>
     </div>
   </header>
+  <div class="menu-overlay" id="menu-overlay" hidden></div>
+  <div class="mobile-menu" id="mobile-menu" hidden role="dialog" aria-modal="true" aria-label="Menu">
+    <nav aria-label="Mobile Primary">
+      <a id="mobile-nav-home" href="#hero">Home</a>
+      <a id="mobile-nav-about" href="#about">About</a>
+      <a id="mobile-nav-work" href="#work">Work</a>
+      <a id="mobile-nav-contact" href="#contact">Contact</a>
+      <a href="condition.html" id="mobile-nav-condition">Condition Rater</a>
+      <button class="lang-toggle mobile-lang-toggle" type="button" id="mobile-lang-toggle" aria-label="Switch language">GR</button>
+    </nav>
+  </div>
 
   <main>
     <section id="hero" class="hero">
@@ -33,7 +52,7 @@
           <h1 class="display scribble-underline">Miranda's</h1>
           <p class="lead" id="hero-lead">Thoughtful, high-quality <strong>repairs & alterations</strong> from denim to wedding dresses and home textiles.</p>
           <div class="hero-actions">
-            <a class="btn btn-stitch" id="hero-btn-primary" href="#contact">Book a fitting</a>
+            <a class="btn btn-stitch" id="hero-btn-primary" href="#contact">Book a fitting ❤</a>
             <a class="btn btn-secondary" id="hero-btn-secondary" href="#work">See the work</a>
           </div>
           <dl class="meta">
