previous logo was boldier

--- a/static/condition.html
+++ b/static/condition.html
@@ -17,7 +17,7 @@
       <a class="brand" href="index.html#hero">
         <picture>
           <source media="(max-width: 767.98px)" srcset="assets/logo/mobile_logo.svg">
-          <img class="brand-logo" src="assets/logo/procre_logo.svg" alt="Miranda's">
+          <img class="brand-logo" src="assets/logo/thereallogo.svg" alt="Miranda's">
         </picture>
       </a>
       <button class="menu-toggle" type="button" id="menu-toggle" aria-label="Open menu" aria-controls="mobile-menu" aria-expanded="false">
