Unify pages common parts

--- a/static/condition.html
+++ b/static/condition.html
@@ -6,12 +6,12 @@
   <title>AI Fabric Condition Rater — Miranda</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Open+Sans:wght@400;600;700&family=Caveat:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Nunito:wght@400;600;700&family=Open+Sans:wght@400;600;700&family=Caveat:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="condition.css">
   <link rel="icon" href="/assets/stickers/bow.ico" type="image/x-icon">
 </head>
-<body>
+<body data-page="condition">
   <header class="nav">
     <div class="container nav-row">
       <a class="brand" href="index.html#hero">
@@ -152,6 +152,7 @@
     </div>
   </footer>
 
-  <script src="condition.js"></script>
+  <script src="main.js" defer></script>
+  <script src="condition.js" defer></script>
 </body>
 </html>
