--- a/static/index.html
+++ b/static/index.html
@@ -6,11 +6,11 @@
   <title>Miranda — Creative Repairs & Alterations</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Nunito:wght@400;600;700;family=Caveat:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Nunito:wght@400;600;700&family=Open+Sans:wght@400;600;700&family=Caveat:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="/assets/stickers/bow.ico" type="image/x-icon">
 </head>
-<body>
+<body data-page="home">
   <header class="nav">
     <div class="container nav-row">
       <a class="brand" href="index.html#hero">
@@ -191,7 +191,7 @@
     </div>
   </footer>
 
-  <script src="main.js"></script>
+  <script src="main.js" defer></script>
 </body>
 
 <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
